fixing spacing

--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@ nav .fa{
 
 .travel-col{
 	flex-basis: 46%;
-	padding: 10px 2px;
+	padding: 10px 15px;
 }
 
 .travel-col img{
